Replaced h1,h2,h3 tags to the correct tags, deleted gap useless property

--- a/src/blocks/product-card.css
+++ b/src/blocks/product-card.css
@@ -61,7 +61,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  gap: 60px;
 }
 
 .product-card__price-label {
@@ -81,11 +80,6 @@
   color: var(--main-accent);
 }
 
-.product-card__buy {
-
-  margin-bottom: 16px;
-}
-
 .product-card__buy-link {
   cursor: pointer;
 
@@ -98,6 +92,8 @@
 
   display: inline-block;
   padding: 12px 70px;
+  margin-bottom: 16px;
+
   border: 1px solid var(--blue-accent);
   background: var(--blue-accent);
   border-radius: 5px;
