--- a/src/settings.css
+++ b/src/settings.css
@@ -1,7 +1,9 @@
 /* #region Reset */
 body,
 h1,
-h2 {
+h2,
+h3,
+p {
   margin: 0;
 }
 
